load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

test_suite(
    name = "flx_tests",
    tests = [
        "//cmd:cmd_test",
        "//internal/fs:fs_test",
        "//internal/loader:loader_test",
    ],
)

gazelle(name = "gazelle")

go_library(
    name = "flx_lib",
    srcs = ["main.go"],
    importpath = "github.com/omnicate/flx",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "flx",
    embed = [":flx_lib"],
    visibility = ["//visibility:public"],
    gotags = ["purego"],
    pure = "on",  # disable CGO
)
