load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

test_suite(
    name = "flx_tests",
    tests = [
        "//cmd:cmd_test",
        "//internal/fs:fs_test",
        "//internal/loader:loader_test",
    ],
)

gazelle(name = "gazelle")

go_library(
    name = "flx_lib",
    srcs = ["main.go"],
    importpath = "github.com/omnicate/flux-local-explorer",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "flx",
    embed = [":flx_lib"],
    gotags = ["purego"],
    pure = "on",  # disable CGO
    visibility = ["//visibility:public"],
)

go_binary(
    name = "flux-local-explorer",
    embed = [":flx_lib"],
    gotags = ["purego"],
    pure = "on",  # disable CGO
    visibility = ["//visibility:public"],
)
