bazel_dep(name = "rules_go", version = "0.54.0")
bazel_dep(name = "gazelle", version = "0.43.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

go_deps.module_override(
    patch_strip = 1,
    patches = [
        "//patches/io_k8s_sigs_kustomize_api:kusttarget.patch",
    ],
    path = "sigs.k8s.io/kustomize/api",
)

use_repo(
    go_deps,
    "com_github_external_secrets_external_secrets",
    "com_github_fluxcd_flux2_v2",
    "com_github_fluxcd_helm_controller_api",
    "com_github_fluxcd_kustomize_controller_api",
    "com_github_fluxcd_pkg_apis_meta",
    "com_github_fluxcd_pkg_chartutil",
    "com_github_fluxcd_pkg_kustomize",
    "com_github_fluxcd_pkg_oci",
    "com_github_fluxcd_source_controller_api",
    "com_github_go_git_go_git_v5",
    "com_github_go_logr_zerologr",
    "com_github_google_go_containerregistry",
    "com_github_rs_zerolog",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_spf13_viper",
    "io_k8s_api",
    "io_k8s_apimachinery",
    "io_k8s_client_go",
    "io_k8s_sigs_controller_runtime",
    "io_k8s_sigs_kustomize_api",
    "io_k8s_sigs_kustomize_kyaml",
    "io_k8s_sigs_yaml",
)
