load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cmd",
    srcs = [
        "diff.go",
        "diff_kustomization.go",
        "get.go",
        "get_git_repo.go",
        "get_kustomization.go",
        "get_oci_repo.go",
        "root.go",
        "stat.go",
        "version.go",
    ],
    importpath = "github.com/omnicate/flx/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/controller",
        "//internal/controller/extsecret",
        "//internal/controller/git",
        "//internal/controller/helm",
        "//internal/controller/kustomize",
        "//internal/controller/oci",
        "//internal/diff",
        "//internal/loader",
        "@com_github_fluxcd_flux2_v2//pkg/printers",
        "@com_github_fluxcd_kustomize_controller_api//v1:api",
        "@com_github_fluxcd_source_controller_api//v1:api",
        "@com_github_fluxcd_source_controller_api//v1beta2",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_spf13_viper//:viper",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_sigs_kustomize_kyaml//filesys",
        "@io_k8s_sigs_yaml//:yaml",
    ],
    x_defs = {
        "Version": "{STABLE_STAMP_VERSION}",
    },
)

go_test(
    name = "cmd_test",
    srcs = [
        "get_test.go",
        "root_test.go",
    ],
    embed = [":cmd"],
    deps = [
        "//internal/controller",
        "//internal/controller/git",
        "//internal/loader",
        "@com_github_fluxcd_kustomize_controller_api//v1:api",
        "@com_github_fluxcd_source_controller_api//v1:api",
        "@com_github_fluxcd_source_controller_api//v1beta2",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_sigs_kustomize_api//resource",
        "@io_k8s_sigs_yaml//:yaml",
    ],
)
