load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "loader",
    srcs = [
        "helm.go",
        "kustomization.go",
        "loader.go",
        "option.go",
        "queue.go",
        "repository.go",
    ],
    importpath = "github.com/omnicate/flx/loader",
    visibility = ["//visibility:public"],
    deps = [
        "//fs",
        "//resource",
        "@com_github_fluxcd_kustomize_controller_api//v1:api",
        "@com_github_fluxcd_pkg_chartutil//:chartutil",
        "@com_github_fluxcd_pkg_kustomize//:kustomize",
        "@com_github_fluxcd_pkg_oci//client",
        "@com_github_fluxcd_source_controller_api//v1:api",
        "@com_github_fluxcd_source_controller_api//v1beta2",
        "@com_github_go_logr_zerologr//:zerologr",
        "@com_github_google_go_containerregistry//pkg/crane",
        "@com_github_rs_zerolog//:zerolog",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1/unstructured",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/client/fake",
        "@io_k8s_sigs_kustomize_api//konfig",
        "@io_k8s_sigs_kustomize_api//krusty",
        "@io_k8s_sigs_kustomize_api//resource",
        "@io_k8s_sigs_kustomize_api//types",
        "@io_k8s_sigs_kustomize_kyaml//filesys",
        "@io_k8s_sigs_kustomize_kyaml//kio",
        "@io_k8s_sigs_yaml//:yaml",
    ],
)

go_test(
    name = "loader_test",
    srcs = ["repository_test.go"],
    embed = [":loader"],
)
