load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "loader",
    srcs = [
        "loader.go",
        "result_set.go",
    ],
    importpath = "github.com/omnicate/flx/loader",
    visibility = ["//visibility:public"],
    deps = [
        "//resource",
        "@io_k8s_sigs_kustomize_api//konfig",
        "@io_k8s_sigs_kustomize_api//krusty",
        "@io_k8s_sigs_kustomize_api//resource",
        "@io_k8s_sigs_kustomize_api//types",
        "@io_k8s_sigs_kustomize_kyaml//filesys",
        "@io_k8s_sigs_kustomize_kyaml//kio",
    ],
)
