load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "controller",
    srcs = [
        "controller.go",
        "resource.go",
    ],
    importpath = "github.com/omnicate/flx/internal/controller",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_apimachinery//pkg/apis/meta/v1/unstructured",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_kustomize_api//resource",
        "@io_k8s_sigs_yaml//:yaml",
    ],
)
