load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "loader",
    srcs = [
        "clientset.go",
        "loader.go",
        "manager.go",
        "tree.go",
    ],
    importpath = "github.com/omnicate/flx/internal/loader",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/controller",
        "@com_github_rs_zerolog//:zerolog",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_kustomize_api//konfig",
        "@io_k8s_sigs_kustomize_api//krusty",
        "@io_k8s_sigs_kustomize_api//resource",
        "@io_k8s_sigs_kustomize_api//types",
        "@io_k8s_sigs_kustomize_kyaml//filesys",
        "@io_k8s_sigs_kustomize_kyaml//kio",
    ],
)

go_test(
    name = "loader_test",
    srcs = ["loader_test.go"],
    embed = [":loader"],
    deps = [
        "//internal/controller",
        "@io_k8s_sigs_kustomize_kyaml//filesys",
    ],
)
