load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "kube",
    srcs = [
        "manager.go",
        "tree.go",
    ],
    importpath = "github.com/omnicate/flx/loader/kube",
    visibility = ["//visibility:public"],
    deps = [
        "//loader",
        "//loader/controller",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/client/fake",
        "@io_k8s_sigs_kustomize_kyaml//filesys",
    ],
)
