load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "api_lib",
    srcs = ["main.go"],
    importpath = "github.com/omnicate/flx/lib/kustomize/api",
    visibility = ["//visibility:private"],
    deps = ["@io_k8s_sigs_kustomize_api//provenance"],
)

go_binary(
    name = "api",
    embed = [":api_lib"],
    visibility = ["//visibility:public"],
)
