load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "kustomize_lib",
    srcs = ["main.go"],
    importpath = "github.com/omnicate/flx/lib/kustomize/kustomize",
    visibility = ["//visibility:private"],
    deps = ["@io_k8s_sigs_kustomize_kustomize_v5//commands:go_default_library"],
)

go_binary(
    name = "kustomize",
    embed = [":kustomize_lib"],
    visibility = ["//visibility:public"],
)
