load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "extsecret",
    srcs = ["controller.go"],
    importpath = "github.com/omnicate/flx/loader/controller/extsecret",
    visibility = ["//visibility:public"],
    deps = [
        "//loader/controller",
        "@com_github_external_secrets_external_secrets//apis/externalsecrets/v1beta1",
        "@com_github_rs_zerolog//:zerolog",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_sigs_kustomize_api//resource",
    ],
)
