load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "oci",
    srcs = [
        "controller.go",
        "options.go",
    ],
    importpath = "github.com/omnicate/flx/loader/controller/oci",
    visibility = ["//visibility:public"],
    deps = [
        "//fs",
        "//loader/controller",
        "@com_github_fluxcd_pkg_oci//client",
        "@com_github_fluxcd_source_controller_api//v1beta2",
        "@com_github_google_go_containerregistry//pkg/crane",
        "@com_github_rs_zerolog//:zerolog",
        "@io_k8s_sigs_kustomize_kyaml//filesys",
    ],
)
