load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "ifc",
    srcs = ["ifc.go"],
    importpath = "github.com/omnicate/flx/lib/kustomize/api/ifc",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_sigs_kustomize_api//types",
        "@io_k8s_sigs_kustomize_kyaml//yaml",
    ],
)
