load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "konfig",
    srcs = [
        "doc.go",
        "general.go",
        "plugins.go",
    ],
    importpath = "github.com/omnicate/flx/lib/kustomize/api/konfig",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_sigs_kustomize_api//types",
        "@io_k8s_sigs_kustomize_kyaml//filesys",
    ],
)

go_test(
    name = "konfig_test",
    srcs = ["plugins_test.go"],
    embed = [":konfig"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_sigs_kustomize_api//types",
        "@io_k8s_sigs_kustomize_kyaml//filesys",
    ],
)
