load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "krusty",
    srcs = [
        "doc.go",
        "kustomizer.go",
        "options.go",
    ],
    importpath = "github.com/omnicate/flx/lib/kustomize/api/krusty",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_sigs_kustomize_api//internal/builtins",
        "@io_k8s_sigs_kustomize_api//internal/loader",
        "@io_k8s_sigs_kustomize_api//internal/plugins/builtinhelpers",
        "@io_k8s_sigs_kustomize_api//internal/plugins/loader",
        "@io_k8s_sigs_kustomize_api//internal/target",
        "@io_k8s_sigs_kustomize_api//internal/utils",
        "@io_k8s_sigs_kustomize_api//konfig",
        "@io_k8s_sigs_kustomize_api//provenance",
        "@io_k8s_sigs_kustomize_api//provider",
        "@io_k8s_sigs_kustomize_api//resmap",
        "@io_k8s_sigs_kustomize_api//types",
        "@io_k8s_sigs_kustomize_kyaml//errors",
        "@io_k8s_sigs_kustomize_kyaml//filesys",
        "@io_k8s_sigs_kustomize_kyaml//openapi",
    ],
)

go_test(
    name = "krusty_test",
    srcs = [
        "accumulation_test.go",
        "baseandoverlaymedium_test.go",
        "baseandoverlaysmall_test.go",
        "basereusenameprefix_test.go",
        "basic_io_test.go",
        "blankvalues_test.go",
        "complexcomposition_test.go",
        "component_test.go",
        "configmaps_test.go",
        "crd_test.go",
        "customconfig_test.go",
        "customconfigofbuiltinplugin_test.go",
        "customconfigreusable_test.go",
        "diamondcomposition_test.go",
        "diamondpatchref_test.go",
        "diamonds_test.go",
        "directoryarrangement_test.go",
        "disablenamesuffix_test.go",
        "duplicatekeys_test.go",
        "extendedpatch_test.go",
        "fnplugin_test.go",
        "generatormergeandreplace_test.go",
        "generatoroptions_test.go",
        "gvknpatch_test.go",
        "helmchartinflationgenerator_test.go",
        "iampolicygenerator_test.go",
        "inlinelabels_test.go",
        "inlinepatch_test.go",
        "inlinetransformer_test.go",
        "intermediateresourceid_test.go",
        "issue2896_test.go",
        "issue3377_test.go",
        "keepemptyarray_test.go",
        "kustomizationmetadata_test.go",
        "kustomizer_test.go",
        "legacy_order_test.go",
        "legacyprefixsuffixtransformer_test.go",
        "localconfig_test.go",
        "managedbylabel_test.go",
        "mergeenvfrom_test.go",
        "multibytecharacter_test.go",
        "multiplepatch_test.go",
        "namedspacedserviceaccounts_test.go",
        "nameprefixsuffixpatch_test.go",
        "namereference_test.go",
        "namespacedgenerators_test.go",
        "namespaces_test.go",
        "nameupdateinroleref_test.go",
        "no_list_items_test.go",
        "nullvalues_test.go",
        "numericcommonlabels_test.go",
        "openapicustomschema_test.go",
        "originannotation_test.go",
        "patchdelete_test.go",
        "pluginenv_test.go",
        "poddisruptionbudget_test.go",
        "remoteloader_test.go",
        "repeatbase_test.go",
        "replacementtransformer_test.go",
        "resourceconflict_test.go",
        "rolebindingacrossnamespace_test.go",
        "simple_test.go",
        "sortordertransformer_test.go",
        "stringquoteblank_test.go",
        "transformerannotation_test.go",
        "transformerplugin_test.go",
        "transformersarrays_test.go",
        "transformersimage_test.go",
        "validatingwebhook_test.go",
        "variableref_test.go",
    ],
    data = glob(["testdata/**"]),
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_sigs_kustomize_api//internal/kusterr",
        "@io_k8s_sigs_kustomize_api//internal/loader",
        "@io_k8s_sigs_kustomize_api//internal/target",
        "@io_k8s_sigs_kustomize_api//internal/utils",
        "@io_k8s_sigs_kustomize_api//konfig",
        "@io_k8s_sigs_kustomize_api//krusty",
        "@io_k8s_sigs_kustomize_api//resmap",
        "@io_k8s_sigs_kustomize_api//resource",
        "@io_k8s_sigs_kustomize_api//testutils/kusttest",
        "@io_k8s_sigs_kustomize_api//types",
        "@io_k8s_sigs_kustomize_kyaml//copyutil",
        "@io_k8s_sigs_kustomize_kyaml//filesys",
        "@io_k8s_sigs_kustomize_kyaml//openapi",
        "@io_k8s_sigs_kustomize_kyaml//openapi/kubernetesapi",
        "@io_k8s_sigs_kustomize_kyaml//yaml",
    ],
)
