load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "kv",
    srcs = ["kv.go"],
    importpath = "github.com/omnicate/flx/lib/kustomize/api/kv",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_sigs_kustomize_api//ifc",
        "@io_k8s_sigs_kustomize_api//internal/generators",
        "@io_k8s_sigs_kustomize_api//types",
        "@io_k8s_sigs_kustomize_kyaml//errors",
    ],
)

go_test(
    name = "kv_test",
    srcs = ["kv_test.go"],
    embed = [":kv"],
    deps = [
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_sigs_kustomize_api//pkg/loader",
        "@io_k8s_sigs_kustomize_api//testutils/valtest",
        "@io_k8s_sigs_kustomize_api//types",
        "@io_k8s_sigs_kustomize_kyaml//filesys",
    ],
)
