load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "provenance",
    srcs = ["provenance.go"],
    importpath = "github.com/omnicate/flx/lib/kustomize/api/provenance",
    visibility = ["//visibility:public"],
    deps = ["@com_github_blang_semver_v4//:semver"],
)

go_test(
    name = "provenance_test",
    srcs = ["provenance_test.go"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@io_k8s_sigs_kustomize_api//provenance",
    ],
)
