load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "provider",
    srcs = ["depprovider.go"],
    importpath = "github.com/omnicate/flx/lib/kustomize/api/provider",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_sigs_kustomize_api//hasher",
        "@io_k8s_sigs_kustomize_api//ifc",
        "@io_k8s_sigs_kustomize_api//internal/validate",
        "@io_k8s_sigs_kustomize_api//resource",
    ],
)
