load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "resmap",
    srcs = [
        "factory.go",
        "resmap.go",
        "reswrangler.go",
    ],
    importpath = "github.com/omnicate/flx/lib/kustomize/api/resmap",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_sigs_kustomize_api//filters/annotations",
        "@io_k8s_sigs_kustomize_api//ifc",
        "@io_k8s_sigs_kustomize_api//internal/kusterr",
        "@io_k8s_sigs_kustomize_api//resource",
        "@io_k8s_sigs_kustomize_api//types",
        "@io_k8s_sigs_kustomize_kyaml//errors",
        "@io_k8s_sigs_kustomize_kyaml//kio",
        "@io_k8s_sigs_kustomize_kyaml//resid",
        "@io_k8s_sigs_kustomize_kyaml//yaml",
    ],
)

go_test(
    name = "resmap_test",
    srcs = [
        "factory_test.go",
        "resmap_test.go",
        "reswrangler_test.go",
        "selector_test.go",
    ],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_sigs_kustomize_api//filters/labels",
        "@io_k8s_sigs_kustomize_api//ifc",
        "@io_k8s_sigs_kustomize_api//internal/loader",
        "@io_k8s_sigs_kustomize_api//kv",
        "@io_k8s_sigs_kustomize_api//pkg/loader",
        "@io_k8s_sigs_kustomize_api//provider",
        "@io_k8s_sigs_kustomize_api//resmap",
        "@io_k8s_sigs_kustomize_api//resource",
        "@io_k8s_sigs_kustomize_api//testutils/kusttest",
        "@io_k8s_sigs_kustomize_api//testutils/resmaptest",
        "@io_k8s_sigs_kustomize_api//testutils/valtest",
        "@io_k8s_sigs_kustomize_api//types",
        "@io_k8s_sigs_kustomize_kyaml//filesys",
        "@io_k8s_sigs_kustomize_kyaml//kio",
        "@io_k8s_sigs_kustomize_kyaml//resid",
        "@io_k8s_sigs_kustomize_kyaml//yaml",
    ],
)
