load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "resource",
    srcs = [
        "doc.go",
        "factory.go",
        "idset.go",
        "origin.go",
        "resource.go",
    ],
    importpath = "github.com/omnicate/flx/lib/kustomize/api/resource",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_sigs_kustomize_api//filters/patchstrategicmerge",
        "@io_k8s_sigs_kustomize_api//ifc",
        "@io_k8s_sigs_kustomize_api//internal/generators",
        "@io_k8s_sigs_kustomize_api//internal/git",
        "@io_k8s_sigs_kustomize_api//internal/kusterr",
        "@io_k8s_sigs_kustomize_api//internal/utils",
        "@io_k8s_sigs_kustomize_api//konfig",
        "@io_k8s_sigs_kustomize_api//types",
        "@io_k8s_sigs_kustomize_kyaml//kio",
        "@io_k8s_sigs_kustomize_kyaml//kio/kioutil",
        "@io_k8s_sigs_kustomize_kyaml//resid",
        "@io_k8s_sigs_kustomize_kyaml//yaml",
        "@io_k8s_sigs_yaml//:yaml",
    ],
)

go_test(
    name = "resource_test",
    srcs = [
        "factory_test.go",
        "idset_test.go",
        "origin_test.go",
        "resource_test.go",
    ],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_sigs_kustomize_api//internal/loader",
        "@io_k8s_sigs_kustomize_api//internal/utils",
        "@io_k8s_sigs_kustomize_api//provider",
        "@io_k8s_sigs_kustomize_api//resource",
        "@io_k8s_sigs_kustomize_api//types",
        "@io_k8s_sigs_kustomize_kyaml//filesys",
        "@io_k8s_sigs_kustomize_kyaml//kio",
        "@io_k8s_sigs_kustomize_kyaml//resid",
        "@io_k8s_sigs_kustomize_kyaml//yaml",
    ],
)
