load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "types",
    srcs = [
        "builtinpluginloadingoptions_string.go",
        "configmapargs.go",
        "doc.go",
        "erronlybuiltinpluginsallowed.go",
        "errunabletofind.go",
        "fieldspec.go",
        "generationbehavior.go",
        "generatorargs.go",
        "generatoroptions.go",
        "helmchartargs.go",
        "iampolicygenerator.go",
        "image.go",
        "kustomization.go",
        "kvpairsources.go",
        "labels.go",
        "loadrestrictions.go",
        "loadrestrictions_string.go",
        "objectmeta.go",
        "pair.go",
        "patch.go",
        "patchstrategicmerge.go",
        "pluginconfig.go",
        "pluginrestrictions.go",
        "pluginrestrictions_string.go",
        "replacement.go",
        "replacementfield.go",
        "replica.go",
        "secretargs.go",
        "selector.go",
        "sortoptions.go",
        "typemeta.go",
        "var.go",
    ],
    importpath = "github.com/omnicate/flx/lib/kustomize/api/types",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_sigs_kustomize_kyaml//errors",
        "@io_k8s_sigs_kustomize_kyaml//filesys",
        "@io_k8s_sigs_kustomize_kyaml//resid",
        "@io_k8s_sigs_yaml//:yaml",
    ],
)

go_test(
    name = "types_test",
    srcs = [
        "fieldspec_test.go",
        "generatoroptions_test.go",
        "helmchartargs_test.go",
        "kustomization_test.go",
        "patch_test.go",
        "selector_test.go",
        "var_test.go",
    ],
    embed = [":types"],
    deps = [
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_sigs_kustomize_api//types",
        "@io_k8s_sigs_kustomize_kyaml//resid",
        "@io_k8s_sigs_yaml//goyaml.v2:goyaml_v2",
    ],
)
