load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "depprobcheck_lib",
    srcs = ["main.go"],
    importpath = "github.com/omnicate/flx/lib/kustomize/cmd/depprobcheck",
    visibility = ["//visibility:private"],
    deps = [
        "@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library",
        "@io_k8s_kube_openapi//pkg/validation/spec",
    ],
)

go_binary(
    name = "depprobcheck",
    embed = [":depprobcheck_lib"],
    visibility = ["//visibility:public"],
)
